Use the Native Certificate Viewer on MacOS even on MacViews

BUG=766926

Change-Id: I6d0302763687bbb4fe30682684ad85a2ac79f782
Reviewed-on: https://chromium-review.googlesource.com/1145674
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Robert Liao <robliao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577201}
Former-commit-id: 7fbbd5f29e26ea66c2a154bbcc97707574dac518